@@ -44,6 +44,7 @@ enum MalagaSymbol {
 	MS_POSSESSIVE,
 	MS_KYSYMYSLIITE,
 	MS_FOCUS,
+	MS_COMPARISON,
 	MS_LAST_SYMBOL
 };
 
